save memory, only keep important fields of mobility scans while parsing